--- a/publication/present.html
+++ b/publication/present.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="publication">
                     <div class="media-body">
-                        <ul><li><p>[SCI]</p> Medard Edmund Mswahili, JunHa Hwang, Kyuri Jo, Jagath C. Rajapakse, Péter Kovács, Young-Seob Jeong, "Entropy-based byte patching transformer for self-supervised pretraining of SMILES data," iScience, December 26, 2025. (published online) (ISSN: 2589-0042, Q1, Publisher: CELL press) [ACK: NRF2020(50%),NRF2025(50%)] </li>
+                        <ul><li><p>[SCI]</p> Medard Edmund Mswahili, JunHa Hwang, Kyuri Jo, Jagath C. Rajapakse, Péter Kovács, Young-Seob Jeong, "Entropy-based byte patching transformer for self-supervised pretraining of SMILES data," iScience, Vol. 29, Issue 2, February 20, 2026. (published online) (ISSN: 2589-0042, Q1, Publisher: CELL press) [ACK: NRF2020(50%),NRF2025(50%)]</li>
                             <li><p>[국제학술대회]</p> Ha-neul Kim, Jun-Ha Hwang, Young-Seob Jeong, "Personality recognition using multi-task tuning for personality-based generation," in Proceedings of 17th International Conference on Frontiers of Information Technology, Applications and Tools (FITAT), Ho Cho Minh, Vietnam, December 11-14, 2025. (presentation: December 12) [ACK: NRF2025,IITP개성AI]</li>
                             <li><p>[국내학술대회]</p> 김은진, 홍경훈, 정영섭, "언어발달장애 아동의 언어 중재를 위한 생성형 언어모델 기반 대화 시스템," 한국통신학회 추계종합학술발표회 논문집, 경주, Korea, November 20-22, 2025. (presentation: November 21) [ACK: NRF2025,CRC2023]</li>
                             <li><p>[SCI]</p> Eun-Jin Kim, Young-Seob Jeong, "Efficient Malware Detection in HWP Byte Sequences Using Pooling-Based Model," Applied Sciences, Vol. 15, Issue 21, pp.1-10, October 28, 2025. (ISSN: 2076-3417, Q2, Publisher: MDPI) [ACK: 중점연구소컴정연2020(100%)] </li>
